# A_maze_ing

./: .gitignore  INTERFACES.md  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  output_test_5x5.txt  pyproject.toml  test.py  test_output.py  test_output.txt  to_do.txt
mazegen/: maze_generator.py  temp.py
