[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A Kruskal's-algorithm maze generator, reusable as a standalone module."
requires-python = ">=3.10"
authors = [
    { name = "jkrishna"},
    { name = "icorrale"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]